--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
             <artifactId>fontawesomefx</artifactId>
             <version>8.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.jfoenix/jfoenix -->
+        <dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>9.0.10</version>
+        </dependency>
 
     </dependencies>
 
